# ChatGPT-Next-Web

./: README.md  next.config.mjs  package.json
.github/workflows/: app.yml
app/: constant.ts
app/components/: chat.tsx  home.tsx  image-prompt-selector.tsx  mcp-market.module.scss  mcp-market.tsx  sidebar.tsx  ui-lib.module.scss
app/locales/: cn.ts  en.ts
app/mcp/: actions.ts  api.ts  client.ts  server-actions.stub.ts  types.ts
app/store/: chat.ts
app/utils/: image-prompts.ts
docs/: grok-image-generation.md  image-generation-guide.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mcp.rs
src-tauri/src/mcp/: sse_transport.rs
test/: image-generation.test.ts
