[package]
name = "nextchat"
version = "0.1.0"
description = "A cross platform app for LLM ChatBot."
authors = ["Yidadaa"]
license = "mit"
repository = ""
default-run = "nextchat"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "http-all",
    "notification-all",
    "fs-all",
    "clipboard-all",
    "dialog-all",
    "shell-open",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-set-icon",
    "window-set-ignore-cursor-events",
    "window-set-resizable",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
percent-encoding = "2.3.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3.30"
bytes = "1.7.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tokio]
version = "1.28"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec", "io"]

[dependencies.log]
version = "0.4"

# MCP SDK 及相关依赖
[dependencies.rmcp]
git = "https://github.com/modelcontextprotocol/rust-sdk"
features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"]

[dependencies.anyhow]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.dirs]
version = "5.0"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.once_cell]
version = "1.19"

[dependencies.chrono]
version = "0.4"
